--- a/index.html
+++ b/index.html
@@ -1,14 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/style.css">
-  <title>Document</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <title>Document</title>
+  </head>
+  <body>
+    <main id="home-main">
+      <section id="cover">
+        <nav id="nav-bar">
+          <ul class="nav-list">
+            <li id="btn-apple"><a href=""><span>Apple</span></a></li>
+            <li id="btn-store"><a href=""><span>Store</span></a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+          </ul>
+        </nav>
+        <header id="main-header">
+          <h1 class="cover-title">
+            <a href="">
+              <img src="img/your_verse_title_small.png" alt="">
+            </a>
+          </h1>
+          <h2 class="cover-sub-title">
+            <a href="">
+              <img src="img/your_verse_subhead_small.png" alt="">
+            </a>
+          </h2>
+          <div class="cover-quote">
+            <a href="">
+              <img src="img/cta_your_verse_27pt.png" alt="">
+            </a>
+          </div>
+        </header>
+      </section>
+    </main>
+  </body>
 </html>
