Navigation bar added.

--- a/index.html
+++ b/index.html
@@ -15,13 +15,23 @@
           <ul class="nav-list">
             <li id="btn-apple"><a href=""><span>Apple</span></a></li>
             <li id="btn-store"><a href=""><span>Store</span></a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
+            <li id="btn-mac"><a href=""><span>Mac</span></a></li>
+            <li id="btn-ipod"><a href=""><span>iPod</span></a></li>
+            <li id="btn-iphone"><a href=""><span>iPhone</span></a></li>
+            <li id="btn-ipad"><a href=""><span>iPad</span></a></li>
+            <li id="btn-itunes"><a href=""><span>iTunes</span></a></li>
+            <li id="btn-support"><a href=""><span>Support</span></a></li>
           </ul>
+          <div id="search">
+            <form id="search-field">
+              <div id="search-label">
+                <input type="text" id="search-input">
+              </div>
+            </form>
+            <div class="lens">
+              <div class="lens-icon"></div>
+            </div>
+          </div>
         </nav>
         <header id="main-header">
           <h1 class="cover-title">
