Aside elements added.

--- a/index.html
+++ b/index.html
@@ -52,5 +52,32 @@
         </header>
       </section>
     </main>
+    <aside>
+      <section class="cards">
+          <figure class="card">
+            <a href="">
+              <img src="img/promo_iphone5s.jpg" alt="">
+            </a>
+          </figure>
+          <figure class="card">
+            <a href="">
+              <img src="img/promo_iphone5c.jpg" alt="">
+            </a>
+          </figure>
+          <figure class="card">
+            <a href="">
+              <img src="img/promo_30_years.jpg" alt="">
+            </a>
+          </figure>
+          <figure class="card">
+            <a href="">
+              <img src="img/promo_supplier_responsibility.jpg" alt="">
+            </a>
+          </figure>
+      </section>
+    </aside>
+    <footer>
+      
+    </footer>
   </body>
 </html>
