--- a/index.html
+++ b/index.html
@@ -76,8 +76,27 @@
           </figure>
       </section>
     </aside>
-    <footer>
-      
+    <footer id="main-footer">
+      <section class="footer-items">
+          <p class="contact-info">Shop the <a href="#">Apple Online Store</a> (1-800-MY-APPLE), visit an <a href="#">Apple Retail Store</a>, or find a <a href="#">reseller</a>.</p>
+          <ul class="piped right"><li>
+            <a href="">Site Map</a></li><li>
+            <a href="">Hot News</a></li><li>
+            <a href="">RSS Feeds</a></li><li>
+            <a href="">Media Info</a></li><li>
+            <a href="">Environment</a></li><li>
+            <a href="">Job Opportunities</a></li><li>
+            <a href="">Contact Us</a></li><li>
+            <a href=""><img class="flag" src="img/usa.png" alt="Choose your country or region" width="16" height="16"></a>
+          </li></ul>
+          <div class="copyright">
+              <p>Copyright © 2014 Apple Inc. All rights reserved.</p>
+              <ul class="piped"><li>
+                <a href="#">Terms of Use</a></li><li>
+                <a href="#">Privacy Policy</a>
+              </li></ul>
+          </div>
+      </section>
     </footer>
   </body>
 </html>
