--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <body>
     <main id="home-main">
       <section id="cover">
+        <h6 class="hidden">Validation purpose</h6>
         <nav id="nav-bar">
           <ul class="nav-list">
             <li id="btn-apple"><a href=""><span>Apple</span></a></li>
@@ -34,16 +35,16 @@
           </div>
         </nav>
         <header id="main-header">
-          <h1 class="cover-title">
+          <div class="cover-title">
             <a href="">
               <img src="img/your_verse_title_small.png" alt="">
             </a>
-          </h1>
-          <h2 class="cover-sub-title">
+          </div>
+          <div class="cover-sub-title">
             <a href="">
               <img src="img/your_verse_subhead_small.png" alt="">
             </a>
-          </h2>
+          </div>
           <div class="cover-quote">
             <a href="">
               <img src="img/cta_your_verse_27pt.png" alt="">
@@ -54,6 +55,7 @@
     </main>
     <aside>
       <section class="cards">
+        <h6 class="hidden">Validation purpose</h6>
           <figure class="card">
             <a href="">
               <img src="img/promo_iphone5s.jpg" alt="">
@@ -78,6 +80,7 @@
     </aside>
     <footer id="main-footer">
       <section class="footer-items">
+          <h6 class="hidden">Validation purpose</h6>
           <p class="contact-info">Shop the <a href="#">Apple Online Store</a> (1-800-MY-APPLE), visit an <a href="#">Apple Retail Store</a>, or find a <a href="#">reseller</a>.</p>
           <ul class="piped right"><li>
             <a href="">Site Map</a></li><li>
